# rockpass

./: .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  Rocket.toml.example  rockpass.toml.example
.github/: docker.sh
.github/workflows/: build.yml  docker.yml
.gitlab/: renovate.json
migrations/2021-04-22-064802_init/: down.sql  up.sql
migrations/2021-05-28-063154_tokens/: down.sql  up.sql
migrations/2022-03-07-085702_autoincrement/: down.sql  up.sql
migrations/2022-03-21-153112_multitokens/: down.sql  up.sql
migrations/2023-02-21-103736_tokensincrement/: down.sql  up.sql
migrations/2025-01-18-102431_digits/: down.sql  up.sql
src/: cors.rs  fairings.rs  main.rs  models.rs  routes.rs  schema.rs
