[package]
name = "rockpass"
version = "0.9.0"
authors = ["Óscar García Amor"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://gitlab.com/ogarcia/rockpass"
documentation = "https://gitlab.com/ogarcia/rockpass"
homepage = "https://gitlab.com/ogarcia/rockpass"
description = """
A small and ultrasecure LessPass database API server written in Rust.
"""
keywords = ["lesspass", "sqlite", "database", "api", "server"]
edition = "2018"
include = ["migrations/", "src/", "diesel.toml", "LICENSE", "README.md", "rockpass.toml.example"]

[dependencies]
base64 = "0.22.0"
bcrypt = "0.15.0"
chrono = { version = "0.4.34", features = ["serde"] }
diesel = { version = "2.1.4", default-features = false, features = ["sqlite", "chrono"] }
diesel_migrations = "2.1.0"
hmac = "0.12.1"
jwt = "0.16.0"
rocket = { version = "0.5.0", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0", default-features = false, features = ["diesel_sqlite_pool"] }
sha2 = "0.10.8"
uuid = { version = "1.8.0", default-features = false, features = ["v4"] }
