[package]
name = "rockpass"
version = "0.12.1"
authors = ["Óscar García Amor"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://gitlab.com/ogarcia/rockpass"
documentation = "https://gitlab.com/ogarcia/rockpass"
homepage = "https://gitlab.com/ogarcia/rockpass"
description = """
A small and ultrasecure LessPass database API server written in Rust.
"""
keywords = ["lesspass", "sqlite", "database", "api", "server"]
edition = "2024"
include = ["migrations/", "src/", "diesel.toml", "LICENSE", "README.md", "rockpass.toml.example"]

[dependencies]
base64 = "0.22.1"
bcrypt = "0.19.0"
chrono = { version = "0.4.43", features = ["serde"] }
diesel = { version = "2.3.5", default-features = false, features = ["sqlite", "returning_clauses_for_sqlite_3_35", "chrono"] }
diesel_migrations = "2.3.1"
hmac = "0.12.1"
jwt = "0.16.0"
rocket = { version = "0.5.1", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0", default-features = false, features = ["diesel_sqlite_pool"] }
sha2 = "0.10.9"
uuid = { version = "1.19.0", default-features = false, features = ["v4"] }
